tooling/nargo_cli/tests/snapshots/execution_success/regression_9546/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: i16, v1: i16):
    v2 = allocate -> &mut i16
    store v1 at v2
    (no terminator instruction)
}
[regression_9546] Circuit output: -8670
